Adding more examples to ipynb file

--- a/jupyter/notebook/pyspark-intro.ipynb
+++ b/jupyter/notebook/pyspark-intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,117 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.1.3'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark.version"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create Spark DataFrame\n",
-    "df = spark.read.csv(\"/dataset/yahoo-symbols-201709.csv\", header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "106328"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- Ticker: string (nullable = true)\n",
-      " |-- Name: string (nullable = true)\n",
-      " |-- Exchange: string (nullable = true)\n",
-      " |-- Category Name: string (nullable = true)\n",
-      " |-- Country: string (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+--------------------+--------+--------------------+-------+\n",
-      "|Ticker|                Name|Exchange|       Category Name|Country|\n",
-      "+------+--------------------+--------+--------------------+-------+\n",
-      "|  OEDV|Osage Exploration...|     PNK|                null|    USA|\n",
-      "|  AAPL|          Apple Inc.|     NMS|Electronic Equipment|    USA|\n",
-      "|   BAC|Bank of America C...|     NYQ|  Money Center Banks|    USA|\n",
-      "|  AMZN|    Amazon.com, Inc.|     NMS|Catalog & Mail Or...|    USA|\n",
-      "|     T|           AT&T Inc.|     NYQ|Telecom Services ...|    USA|\n",
-      "|  GOOG|       Alphabet Inc.|     NMS|Internet Informat...|    USA|\n",
-      "|    MO|  Altria Group, Inc.|     NYQ|          Cigarettes|    USA|\n",
-      "|   DAL|Delta Air Lines, ...|     NYQ|      Major Airlines|    USA|\n",
-      "|    AA|   Alcoa Corporation|     NYQ|            Aluminum|    USA|\n",
-      "|   AXP|American Express ...|     NYQ|     Credit Services|    USA|\n",
-      "|    DD|E. I. du Pont de ...|     NYQ|Agricultural Chem...|    USA|\n",
-      "|  BABA|Alibaba Group Hol...|     NYQ|Specialty Retail,...|    USA|\n",
-      "|   ABT| Abbott Laboratories|     NYQ|Medical Appliance...|    USA|\n",
-      "|    UA|  Under Armour, Inc.|     NYQ|Textile - Apparel...|    USA|\n",
-      "|  AMAT|Applied Materials...|     NMS|Semiconductor Equ...|    USA|\n",
-      "|  AMGN|          Amgen Inc.|     NMS|       Biotechnology|    USA|\n",
-      "|   AAL|American Airlines...|     NMS|      Major Airlines|    USA|\n",
-      "|   AIG|American Internat...|     NYQ|Property & Casual...|    USA|\n",
-      "|   ALL|The Allstate Corp...|     NYQ|Property & Casual...|    USA|\n",
-      "|  ADBE|Adobe Systems Inc...|     NMS|Application Software|    USA|\n",
-      "+------+--------------------+--------+--------------------+-------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.show()"
+    "### Create Spark DataFrame"
    ]
   },
   {
@@ -140,7 +41,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = spark.read.csv(\"/dataset/yahoo-symbols-201709.csv\", header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame operations\n",
+    "Show Top 20 categories by quantity of stocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cats = df.groupby(df['Category Name']).count()\n",
+    "cats.orderBy(cats['count'].desc()).show(truncate=False)"
+   ]
   }
  ],
  "metadata": {
