Adding pyspark-dataframe-overview notebook

--- a/jupyter/notebook/pyspark-intro.ipynb
+++ b/jupyter/notebook/pyspark-intro.ipynb
@@ -89,6 +89,23 @@
     "cats = df.groupby(df['Category Name']).count()\n",
     "cats.orderBy(cats['count'].desc()).show(truncate=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stop Drive Program\n",
+    "Release resources from Spark Cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
