Editing pySpark class

--- a/jupyter/notebook/pyspark-dataframe-overview.ipynb
+++ b/jupyter/notebook/pyspark-dataframe-overview.ipynb
@@ -8,7 +8,8 @@
     "http://spark.apache.org/docs/2.1.3/api/python/index.html\n",
     "\n",
     "\n",
-    "## Connect to Spark Cluster"
+    "## Connect to Spark Cluster\n",
+    "https://github.com/minrk/findspark"
    ]
   },
   {
@@ -98,6 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Support for compressed (gziped) payload\n",
     "df = spark.read.csv(\"/dataset/pyspark-df-overview/census_income.csv.gz\", header=True, schema=census_schema)\n",
     "df.printSchema()"
    ]
@@ -306,7 +308,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wk = df.groupBy('workclass').agg(count('*').alias('counts')).orderBy('counts').toPandas()"
+    "# This is distributed\n",
+    "df_spark = df.groupBy('workclass').agg(count('*').alias('counts')).orderBy('counts')\n",
+    "\n",
+    "# This is running on driver\n",
+    "df_wk = df_spark.toPandas()"
    ]
   },
   {
@@ -318,7 +324,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "df_wk.plot.bar(x='workclass', y='counts', figsize=(20,6))"
+    "df_wk.plot.bar(x='workclass', y='counts', figsize=(20,6));"
    ]
   },
   {
