--- a/jupyter/notebook/pyspark-dataframe-overview.ipynb
+++ b/jupyter/notebook/pyspark-dataframe-overview.ipynb
@@ -226,6 +226,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.crosstab('age', 'label').sort(\"age_label\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('native-country').agg({'native-country': 'count'}).sort('count(native-country)').show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -425,7 +443,11 @@
     "# Continue Learning\n",
     "\n",
     "* [Kaggle Learn](https://www.kaggle.com/learn/overview)\n",
-    "* [PySpark Cookbook](https://www.safaribooksonline.com/library/view/pyspark-cookbook/9781788835367/)"
+    "* [PySpark Cookbook](https://www.safaribooksonline.com/library/view/pyspark-cookbook/9781788835367/)\n",
+    "\n",
+    "## Other references\n",
+    "\n",
+    "* [PySpark Tutorial for Beginners: Machine Learning Example](https://www.guru99.com/pyspark-tutorial.html)"
    ]
   },
   {
