--- a/py-ml/latex/clase_ml.tex
+++ b/py-ml/latex/clase_ml.tex
@@ -1238,7 +1238,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
 \begin{frame}[fragile]
   \frametitle{Aun más EDA (y ejercicios)}
     \begin{minted}{python}
-    survived_age = df.filter((f.col('survived') == 1) & 
+    survived_age = df.filter((f.col('survived') == 1) &
                    (f.col('age').isNotNull())).select('age').toPandas()
     ...
     g = sns.kdeplot(not_survived_age.squeeze(), color='Red', shade=True)
@@ -1265,7 +1265,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
           valor exacto de las mismas.
         \item ¿Hay alguna clase del barco que garantice mayor probabilidad de
           supervivencia? ¿Es este resultado robusto a controlar por sexo?
-          \textit{Hint}: use la función \texttt{factorplot}.
+          \textit{Hint}: use la función \texttt{catplot}.
       \end{enumerate}
   \end{itemize}
 \end{frame}
