Change slides wording a bit

--- a/py-ml/latex/clase_ml.tex
+++ b/py-ml/latex/clase_ml.tex
@@ -1264,6 +1264,7 @@ siguientes repetimos el proceso en cada (sub)región resultante hasta llegar a a
     \item Sin embargo... hay muchas cosas que (obviamente) no vimos
     \begin{itemize}
       \item No vimos aprendizaje no supervisado ni reinforcement learning
+      \item ... ni tampoco un ejemplo de regresión
       \item Prácticamente no hemos trabajado con datos fechados!
         \begin{itemize}
           \item El mecanismo de train/test split debe tener una noción
