--- a/py-ml/latex/clase_ml.tex
+++ b/py-ml/latex/clase_ml.tex
@@ -1055,7 +1055,10 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
             \item Alguno algoritmos, en Python, soportan exclusivamente
               atributos numéricos.
               Escriba entonces una función que utilice \textit{StringIndexer} para
-              convertir todos los atributos categóricos.
+              convertir todos los atributos categóricos.\\
+              Bonus: ¿Tiene sentido usar esta codificación para
+                atributos que carecen de orden? En caso contrario pruebe
+                emplear \textit{One-Hot-Encoding}.
             \item Fitee una regresión logística sobre la data de entrenamiento y
               genere predicciones (y probabilidades) para la data de test/validación.
             \item Evalue estas predicciones usando métricas
@@ -1280,6 +1283,7 @@ siguientes repetimos el proceso en cada (sub)región resultante hasta llegar a a
           \end{itemize}
           \item Técnicas de reducción de dimensionalidad
           \item Técnicas de corrección de desbalance e clases
+          \item Tuneo de hiperparámetros
     \end{itemize}
   \end{itemize}
 \end{frame}
