--- a/py-ml/latex/clase_ml.tex
+++ b/py-ml/latex/clase_ml.tex
@@ -630,16 +630,16 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
     \item Objetivo: predecir (un subconjunto) sobrevivientes del Titanic (usando machine
       learning). Necesitamos datos!
       \begin{enumerate}
-            \item Ejercicio 1: extracción de datos del hundimiento del Titanic
+            \item \textit{Ejercicio 1: extracción de datos del hundimiento del Titanic}
               \begin{enumerate}
                 \item Escriba una función que obtenga, a partir de
                   \href{http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.csv}{http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.csv} y utilizando Pandas, el conjunto de datos de pasajeros
                   involucrados en el hundimiento del Titanic y lo guarde en un
-                  un archivo \texttt{titanic_local.csv}.
+                  un archivo \texttt{titanic_local.csv}.$^{\dag}$
                 \item Agregue lógica de cache que reuse la copia local del
                   conjunto de datos, en caso que esta exista, y evite de ese
-                  modo consultar repetidas veces el enlace de arriba.
-                \item Renombre la columna `home.dest` a `home\_dest`.
+                  modo consultar repetidas veces el enlace de arriba.$^{\dag}$
+                \item Renombre la columna `home.dest` a `home\_dest`.$^{\dag}$
                 \item Parta este conjunto de datos de forma aleatoria en dos
                   partes de manera tal que un subconjunto tenga el 70\% de los
                   registros.
@@ -729,15 +729,15 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
   \begin{itemize}
     \item En base a esta tabla:
       \begin{itemize}
-        \item Ejercicio 2: Primer preproceso / EDA
+        \item \textit{Ejercicio 2: Primer preproceso / EDA}
           \begin{enumerate}
             \item Escriba una función que permita convertir (\textit{castear})
               múltiples columnas de un tipo de dato a otro y utilícela para
-              asegurar que sus datos sean consistentes con la tabla arriba.
+              asegurar que sus datos sean consistentes con la tabla arriba.$^{\dag}$
             \item ¿Qué variables puede usted ignorar? ¿Por qué? Escriba una
               función que reciba un dataframe y una lista de columnas
               a eliminar y devuelva un el data frame sin estas columnas.
-              Logguee cuáles columnas fueron eliminadas.
+              Logguee cuáles columnas fueron eliminadas.$^{\dag}$
             \item Una los conjuntos de entrenamiento y validación en único
               dataframe con una columna de booleanos indicando pertenencia al
               conjunto de entrenamiento. ¿Por qué tiene sentido trabajar con un
@@ -794,7 +794,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
       \includegraphics[scale=0.12]{kde.png}
     \end{center}
   \begin{itemize}
-    \item Ejercicio 3: Visualizaciones como herramienta de EDA
+    \item \textit{Ejercicio 3: Visualizaciones como herramienta de EDA}
       \begin{enumerate}
         \item Use la función \texttt{distplot} para graficar la distribución del
           precio de boletos.
@@ -805,7 +805,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
           \end{enumerate}
         \item ¿Son los hombres o las mujeres más propensos a sobrevivir?
           Grafique la probabilidad de supervivencia para cada caso y compute el
-          valor exacto de las mismas.
+          valor exacto de las mismas.$^{\dag}$
         \item ¿Hay alguna clase del barco que garantice mayor probabilidad de
           supervivencia? ¿Es este resultado robusto a controlar por sexo?
           \textit{Hint}: use la función \texttt{catplot}.
@@ -824,7 +824,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
           cuasi-nula varianza?
         \item ¿Tiene sentido reemplazar valores extremos?
   \end{itemize}
-  \item Ejercicio 4: Trabajando con valores nulos y constantes
+  \item \textit{Ejercicio 4: Trabajando con valores nulos y constantes}
     \begin{enumerate}
       \item Escriba una función que i) para cada atributo compute la proporción de
         valores nulos y ii) en caso que esta supere un determinado umbral
@@ -836,7 +836,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
         \end{enumerate}
       \item En espíritu similar al punto anterior escriba una función que elimine,
         si las hay, columnas con nula o
-        cuasi nula varianza.
+        cuasi nula varianza.$^{\dag}$
       \item Escriba una función o lógica que permita rellenar valores de
         atributos numéricos por su mediana. ¿Cómo puede extender esto a
         atributos categóricos? % rellenar embark por ejemplo con mas frecuente
@@ -861,13 +861,13 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
       \item Hay muchas opciones para hacer ingeniería de atributos (por ejemplo
         extraer el título del nombre)
       \begin{itemize}
-        \item Ejercicio 5: Ingeniería de atributos
+        \item \textit{Ejercicio 5: Ingeniería de atributos}
           \begin{enumerate}
             \item Cree un nuevo atributo \texttt{family_size} con el tamaño de
-              la familia de cada pasajero (incluyendo a el mismo)
+              la familia de cada pasajero (incluyendo a el mismo).$^{\dag}$
                 \item Dado este nuevo atributo genere 3 atributos adicionales
                   que remitan a familias de un único miembro, de 2 a 4 miembros
-                  y mayor o igual a 5.
+                  y mayor o igual a 5.$^{\dag}$
                 \item Haga uno (o varios) gráficos comparando la probabilidad de
                   supervivencia de cada una de estas familias.
               \item Bonus: Extraiga un prefijo a partir de la columna de boletos
@@ -1050,7 +1050,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
     \item Estamos casi listos para predecir sobrevivientes usando una regresión
       logística
       \begin{itemize}
-        \item Ejercicio 6: Fit Regresión Logística
+        \item \textit{Ejercicio 6: Fit Regresión Logística}
           \begin{enumerate}
             \item Alguno algoritmos, en Python, soportan exclusivamente
               atributos numéricos.
@@ -1063,7 +1063,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
               genere predicciones (y probabilidades) para la data de test/validación.
             \item Evalue estas predicciones usando métricas
               de \textit{accuracy} y ROC para el conjunto de entrenamiento y ROC
-              para el conjunto de validación.
+              para el conjunto de validación.$^{\dag}$
             \item Bonus: utilice \texttt{scikit-learn} o escriba una función
               que compute la métrica \texttt{F1} y con ello evalué nuevamente
               los resultados para ambos conjuntos.
@@ -1238,20 +1238,20 @@ siguientes repetimos el proceso en cada (sub)región resultante hasta llegar a a
 \begin{frame}
   \frametitle{Ejercicios Árboles}
   \begin{itemize}
-    \item Ejercicio 7: Árboles de decisión y aleatorios
-      % https://docs.databricks.com/_static/notebooks/binary-classification.html
+    \item \textit{Ejercicio 7: Árboles de decisión y aleatorios}
       \begin{enumerate}
         \item Fittee un árbol de decisión en vez de una regresión logística y
-          compare la performance de los modelos
+          compare la performance de los modelos.$^{\dag}$
           \begin{itemize}
-            \item Grafique el árbol de decision resultante
+            \item Bonus: Grafique el árbol de decision resultante
           \end{itemize}
-        \item Repita el punto anterior pero ahora con un bosque aleatorio.
-        \item Pruebe aumentar la profundidad del árbol. ¿Mejora su métrica de
-          performance?
+        \item Repita el punto anterior pero ahora con un bosque
+          aleatorio.$^{\dag}$
+          \begin{itemize}
+            \item Bonus: Pruebe aumentar la profundidad del árbol. ¿Mejora su métrica de
+                    performance?
+          \end{itemize}
         \item Compute y grafique la importancia de atributos.
-        \item (Bonus) pruebe graficar la frontera de decisión de alguno de
-          estos modelos.
       \end{enumerate}
       \begin{center}
         \includegraphics[scale=0.18]{run.png}
