--- a/jupyter/notebook/test-pyspark-install.ipynb
+++ b/jupyter/notebook/test-pyspark-install.ipynb
@@ -57,6 +57,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
