--- a/jupyter/notebook/pyspark-check-install.ipynb
+++ b/jupyter/notebook/pyspark-check-install.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Test notebook\n",
-    "It should run without ERR when all Worker nodes contains python deps. From [OneHotEncoderEstimator](https://spark.apache.org/docs/latest/ml-features#onehotencoderestimator)"
+    "It should run without errors when all Worker nodes contains python deps. From [OneHotEncoderEstimator](https://spark.apache.org/docs/latest/ml-features#onehotencoderestimator)"
    ]
   },
   {
