--- a/jupyter/notebook/titanic/titanic_spark_solutions.ipynb
+++ b/jupyter/notebook/titanic/titanic_spark_solutions.ipynb
@@ -109,6 +109,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dft.count()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -148,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.csv'"
+    "url = 'https://gist.githubusercontent.com/petobens/29825af615da09752c2817e96732215a/raw/5ad193b26e8a2b79220028f0f1520a2d868ab28e/titanic.csv'"
    ]
   },
   {
@@ -223,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_raw.randomSplit?"
+    "df_raw.randomSplit?"
    ]
   },
   {
@@ -242,7 +251,7 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import rand, when\n",
-    "df_raw = df_raw.withColumn('train', when(rand(seed=1234) >= 0.3, True).otherwise(False))"
+    "df_raw = df_raw.withColumn('train', when(rand(seed=1234) > 0.3, True).otherwise(False))"
    ]
   },
   {
@@ -251,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rand?"
+    "rand?"
    ]
   },
   {
@@ -484,6 +493,15 @@
     "# Plotting\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.select('train').show(5)"
    ]
   },
   {
