Updates to ML titanic class (#16)
* Update slides

* Small update

--- a/jupyter/notebook/titanic/docs/clase_ml.tex
+++ b/jupyter/notebook/titanic/docs/clase_ml.tex
@@ -83,7 +83,7 @@ decorations.markings}
 \addtobeamertemplate{frametitle}{}{%
 \begin{tikzpicture}[remember picture,overlay]
 \node[anchor=south west, yshift=-2pt, xshift=1pt] at (current page.south west)
-{\includegraphics[scale=0.022]{logo_mutt.png}};
+{\includegraphics[scale=0.22]{logo_mutt.png}};
 \draw[jampp_color] ([yshift=-0.65cm, xshift=0.25cm]current page.north west)
   -- ([yshift=-0.65cm, xshift=\paperwidth - 0.25cm]current page.north west);
 \end{tikzpicture}}
@@ -359,8 +359,8 @@ pdfkeywords={python, machine learning}
 Spark}
 \subtitle{Especialización en Ciencia de Datos - ITBA}
 \author[]{Workshop de Big Data}
-\institute[]{8 de Abril de 2020}
-\date[]{\includegraphics[scale=0.07]{logo_mutt.png}}
+\institute[]{16 de Diciembre de 2020}
+\date[]{\includegraphics[scale=0.35]{logo_mutt.png}}
 
 % Add agenda toc frame at the beginning of each section and anchor for proper
 % hyperlinking
@@ -793,7 +793,7 @@ toc}{\circled{\small{\inserttocsectionnumber}}~%
     g.legend(['Not Survived', 'Survived'])
     \end{minted}
     \begin{center}
-      \includegraphics[scale=0.12]{kde.png}
+      \includegraphics[scale=0.1]{kde.png}
     \end{center}
   \begin{itemize}
     \item \textit{Ejercicio 3: Visualizaciones como herramienta de EDA}
